--- a/src/styles/partials/common.less
+++ b/src/styles/partials/common.less
@@ -679,3 +679,17 @@ div.bootstrap-select {
 .clear {
 	clear: both;
 }
+
+a.more {
+	font-size: 18px;
+	font-family: @bold;
+	color: @dark;
+	text-align: left;
+	float: left;
+	clear: both;
+
+	&:hover {
+		color: @dark;
+		text-decoration: none;
+	}
+}
